fixed illegible link color and hover animation

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
     padding: 0 1rem;
     line-height: 1.5;
     background-color: rgb(7, 8, 44);
+    
     }
 
     h1 {
@@ -25,8 +26,25 @@ body {
 
 ul {
     list-style-type: none;
+    font-size: 1.2rem;
+
 }
 
 li {
     margin: 0.4rem 0;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+        color: rgb(93, 180, 247);
+        font-size: 110%;
+    }
+
+    &:visited {
+        color: rgb(127, 238, 90);
+    }   
 }
